[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Disable unwinding on panic
# - default panic behavior is to unwind
# - by directing panic to abort
[profile.dev]
panic = "abort"

# Disable unwinding on panic
[profile.release]
panic = "abort"
